# epitech-projects

./: README.md
arcade/: Makefile
arcade/GamesLib/: Makefile
arcade/GraphicalLib/: Makefile
arcade/core/: Makefile
arcade/utils/: IGame.hpp  IGraphic.hpp  LibLoader  LibLoader.cpp  LibLoader.hpp  PersonnalType.hpp
area/: docker-compose.yaml  package-lock.json  readme.md
area/client/: Dockerfile  package-lock.json  package.json  server.js  vue.config.js
area/mobile_client/: Dockerfile  README.md  build.sh  pubspec.yaml
area/server/: Dockerfile  package-lock.json  package.json  tsconfig.json
babel/: CMakeLists.txt  README.md  conanfile.txt  protocol.txt
babel/src/client/: main.cpp
babel/src/client/Audio/: IAudio.hpp  IOpus.hpp  Opus.cpp  Opus.hpp  audio.cpp  audio.hpp
babel/src/client/Core/: core.cpp  core.hpp
babel/src/client/GUI/GraphLib/: Igraphic.hpp  QtGraphic.cpp  QtGraphic.hpp
babel/src/client/GUI/Pages/Login/: loginPage.cpp  loginPage.hpp
babel/src/client/GUI/Pages/Profile/: profile.cpp  profile.hpp
babel/src/client/GUI/Pages/Register/: registerPage.cpp  registerPage.hpp
babel/src/client/GUI/Pages/ipPage/: IpPage.cpp  IpPage.hpp
babel/src/client/GUI/Window/: window.cpp  window.hpp
babel/src/client/Network/: IClient.hpp  Qclient.cpp  Qclient.hpp
babel/src/client/utils/: utils.hpp
babel/src/common/: PacketDecoder.cpp  PacketDecoder.hpp  PacketEncoder.cpp  PacketEncoder.hpp  utils.hpp
babel/src/server/: ConnectionTCP.cpp  ConnectionTCP.hpp  Database.cpp  Database.hpp  IConnectionTCP.hpp  IDatabase.hpp  IServerTCP.hpp  ServerTCP.cpp  ServerTCP.hpp  main_server.cpp
corewar/: Makefile  README.md
corewar/asm/: Makefile
corewar/corewar/: Makefile
dashboard/: README.md  docker-compose.yml
dashboard/dashboard/: Dockerfile
indiestudio/: CMakeLists.txt  README.md
indiestudio/assets/: bombe.gltf  red_cube_test.gltf
indiestudio/assets/MainMenu/: rumba_2.iqm  rumba_anim_2.iqm
indiestudio/assets/Perso/: p1_walk.iqm  p1_walk_anim.iqm
indiestudio/assets/Perso/perso1/: p1_dying_anim.iqm  p1_idle_anim.iqm  p1_model.iqm  win_anim_player_1.iqm
indiestudio/assets/Perso/perso2/: p2_dance_anim.iqm  p2_idle_anim.iqm  p2_model.iqm  p2_walk_anim.iqm  win_anim_player_2.iqm
indiestudio/assets/Perso/perso3/: p3_dance_anim.iqm  p3_dying_anim.iqm  p3_idle_anim.iqm  p3_model.iqm  p3_walk_anim.iqm  win_anim_player_3.iqm
indiestudio/assets/Perso/perso4/: p4_dance_anim.iqm  p4_dying_anim.iqm  p4_idle_anim.iqm  p4_model.iqm  p4_walk_anim.iqm  win_anim_player_4.iqm
indiestudio/assets/bomb/: flame.gltf
indiestudio/assets/bonus/: bonus.gltf
indiestudio/assets/maps/: mapInitial.txt  mapOne.txt
indiestudio/jsonScenes/: characterSelectorMenu.json  game.json  howToPlay.json  loadMenu.json  mainMenu.json  pattern.json  pauseMenu.json  playMenu.json  save.json  settingsMenu.json  winMenu.json
indiestudio/save/: savemap.txt
indiestudio/src/core/: Clock.cpp  Clock.hpp  Core.cpp  Core.hpp  EventManager.cpp  EventManager.hpp  LoadScene.cpp  SceneManager.cpp  SceneManager.hpp  main.cpp
indiestudio/src/ecs/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  Scene.cpp  Scene.hpp
indiestudio/src/ecs/ComponentsList/: AnimationComponent.cpp  AnimationComponent.hpp  BombComponent.cpp  BombComponent.hpp  BonusComponent.cpp  BonusComponent.hpp  ButtonComponent.cpp  ButtonComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  DestructibleComponent.cpp  DestructibleComponent.hpp  IA.cpp  IA.hpp  KeyboardEventComponent.cpp  KeyboardEventComponent.hpp  MapComponent.cpp  MapComponent.hpp  MouseEventComponent.cpp  MouseEventComponent.hpp  PauseComponent.cpp  PauseComponent.hpp  Perso3DComponent.cpp  Perso3DComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  RectangleComponent.cpp  RectangleComponent.hpp  StatsComponent.cpp  StatsComponent.hpp  TextComponent.cpp  TextComponent.hpp  TextureComponent.cpp  TextureComponent.hpp
indiestudio/src/game/maps/: mapThree  mapTwo.txt
indiestudio/src/graphicalLib/: I3DPerso.hpp  IAnimation.hpp  ICamera.hpp  IGraphic.hpp  IMap.hpp  ITexture.hpp  Init_raylib.cpp  Raylib3DPerso.cpp  Raylib3DPerso.hpp  RaylibAnimation.cpp  RaylibAnimation.hpp  RaylibCamera.cpp  RaylibCamera.hpp  RaylibMap.cpp  RaylibMap.hpp  RaylibTexture.cpp  RaylibTexture.hpp  graphical.cpp  graphical.hpp  init.json
indiestudio/src/jsoncpp/: json.h
indiestudio/src/lodepng/: lodepng.cpp  lodepng.h
indiestudio/src/utils/: AScene.hpp  GenerateImages.cpp  GenerateImages.hpp  IScene.hpp  jsonParser.cpp  utils.hpp
myrpg/: Makefile  README.md
myrpg/include/: define.h  enum.h  import.h  lib.h  prototype.h  rpg.h  struct.h
myrpg/src/: create_button.c  create_element.c  create_music.c  create_window.c  leave_state_if_error.c  main.c  usage.c
myteams/: Makefile  README.md
redditech/: settings.gradle
redditech/app/: .project  (+1 more)
(+596 files in other folders)
